# notepad-plus

./: CMakeLists.txt
cmake/: FindSkia.cmake
src/: CMakeLists.txt
src/gfx/: color.h  paint.h  point.h  rect.h  size.h
src/os/: CMakeLists.txt  event.h  event_queue.h  font.cpp  font.h  font_manager.h  font_style.h  keys.h  main.cpp  mouse_cursor.h  native_dialogs.h  os.h  scoped_handle.h  style.cpp  style.h  surface.h  system.h  text_align.h  typeface.h  window.h
src/os/common/: tooltip_dialog.h
src/os/skia/: skia_convert.h  skia_font_manager.cpp  skia_font_manager.h  skia_surface.cpp  skia_surface.h  skia_typeface.cpp  skia_typeface.h
src/os/win/: event_queue.cpp  keys.cpp  keys.h  native_dialogs.cpp  styles.cpp  system.cpp  window.cpp  window.h
src/utils/: CMakeLists.txt  paths.h  signal.h  slot.h  string.cpp  string.h
